<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_pointcloud_scan</name>
  <version>0.0.0</version>
  <description>Tools to convert 2D LiDAR data to 3D using a motor to rotate the LiDAR.</description>
  <maintainer email="aleixmateumartinez@gmail.com">aleixmateumartinez@gmail.com</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
